--- a/Neo/FrmPrm.resx
+++ b/Neo/FrmPrm.resx
@@ -630,20 +630,20 @@
   <data name="btnSalir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALrSURBVDhPdZIJSJNhHMY/igqRDTVL3cG3TUXL2uywQouF
-        ZOBsHQSVrVM7NFAjRxYIGcXCZQ2vcGIZaTgiM0zIDrDSJJs6WbVm3nNsMq2c36brsKdvNoga+8EDf3if
-        98efl5fwxfZ6y6eUu7qZpIoOKk75ioq73ESJ5A1UXHkHJakeoHbV9zu2aUYsnro3KbU2K5uMBY8Mx5b9
-        2UhX3EJ+3TMUvRyA+p0dT8d/QVZjcnnq3my9YzYzGaHYq25DwxRwcxi4bQYq+1wof0+hZtAJSXU/5al7
-        s1LjtAQFcZFc+ATFvbO42G7Dxdd/o+qZpAUf/xWAWLPgB0EMuOdojdMQHMCBuKARl/Uu5LZYIH9hnUtu
-        ixUF2glI1B3eG0xuTsDPBJE+RGVq8w8VIP68Bnlvnch4bEJm8+hcTjWbkddqwxYlLWgVi2ftOcdhz0rH
-        5OkTsB9OBpTpaDqpADGfgeiz95DVNoWDD4dxqHEYaU0mHG00IeXBCOIUbyhiIk/mmjmehOmTEkxnbgd1
-        IBFTG0ngwiE8iSbBy6iF9Okk9jwYxL6GISTX9WFd5Qesqu7D2kuttEAmczmES+CIF8Cxno+pDeH4Gh8F
-        bOQD4hgk7SlErv47NlXqIawwYFnJO8SUvsfKqk8QyZsoomW9cHZsORdjK8IxLhTga2wEsJqHb5FsiOh3
-        XZhzD3abGaHy54goNSCqRI+oYj0i1UascAv+pzd4Kb4EMMeWp9aaCVYkmLuvg1diBFmkQ7iqBwJ3ruvA
-        u/ER5Jn/BCCIee0Mhs09B53r6mYHBsN/txKCWxZa0A3ymu5P6JlbZgCZ9cj3RwrJfmllBS6G3w4F+JVm
-        cJVd4F7V/YmyG+wyI/gZ9Q5P3RvmkYfTYQFB8JMUgFc1Ck6hFhxaMpfCTnDoDbjH7tNL+4CVqpGyGAzp
-        IqnqM1k1BDZ9iU1fdoel0GrZZYaqsDTNTk/dN4ukN3u5ZcYR1hVtPvtqZ2LIFR3Pc0RDEL8BeqLLBdcH
-        sSMAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALqSURBVDhPdZILSJNRGIZ/ihKRiZqlbY5/TkVTc3ZZhhoL
+        0cDZuiBYZllppgZm5MgCISVZuErxFipeogyH5AUTUgvsYpItnUyb99I1pkzLzX/qutjbPxtEDh944YPz
+        noePwyHW40iDdjTqsWI5oqyH4ktfU/zcVoonbqL4pT2UsGaCOt4wbjwsm9Ja6tZE1eqmWWQgOKQHwk9d
+        RqKkGll1z3H31QTKBwzomP2NuEdqk6VuzaGHGo09wxUnyrvQtABUTQIPNEDFmAmlgxQefVqEsGacstSt
+        2Slb1Do5sRGZ147CkRXkdOuQ8/ZfCvr1tGDofwGIPZt+EsSEefaRLaqcHdwgyG5BrtKEjE4txC+nV5PR
+        OY1s+RyE5T3WG+gPhuBXCE/pUqDusnPlIviGDJnvF5HyTI3Uti+rudSmQeYbHcKltOC1QLBiSE+CIS0R
+        +isXYTgbCUgT0ZosAbGRAZ9r9UjrWsCZ5knEt0wioVWN8y1qRDVOgS95RxFzmXGm5aQILCULsZR6BNTp
+        MCyEksDNeLT7kOCk1ELUoUdM4yecbPqMyLox7Kv4iF01Y9h76w0tiIszGQO2whjMhTHIHQv7PTAf7A2E
+        ugMCP0TE5CFD+QMHKpQIKFNhR9EA/IoHsbNyFDxxK0V0BgWszPiyMePvgdkALuYDPYHdHHz3YoFHv+vm
+        9HoYdBq4il/As1gF7yIlvAuV8Cofhr9ZsJYR52345mA/4xtbqyGYXrCPzgenaBjkXQU8CvrBNSdfAc79
+        IZBX1whAEBu6GQydeXa63tvHcnSGXbQU3GotLegDeU/xN/TMLlGBTHu6/kdyufxqmum4BbZHJXCv0IAt
+        7QX7juJvpH1glQzDPaXBaKlbY3+ueWm7gxNshdngVH6BW54cbrRkNXkf4EZvwL7whF56HZixMhGTwRDZ
+        iAq+kpWfwaIvsejL5jAlcjmrRFW5PUF2zFJfHxtR1Qi7ZHiKeVuexbrzIczltoJjOaIhiD94GcsERhck
+        BgAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
