--- a/Neo/FrmTscCita.resx
+++ b/Neo/FrmTscCita.resx
@@ -117,21 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="nombreLabel.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </metadata>
-  <metadata name="dueñoLabel.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </metadata>
-  <metadata name="grupoLabel.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </metadata>
-  <metadata name="razaLabel.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </metadata>
-  <metadata name="sexoLabel.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </metadata>
   <metadata name="numeroCitaLabel.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </metadata>
@@ -156,14 +141,17 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="bindingNavigatorAddNewItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAUpJREFUOE9jGLzg7gL2/7fmcf6/Oofr/8UZvP+hwsSD60CNfx41/v/zsOH/yckC
-        pBtwfjov3ICDPSKkG3B8kiBQc93/Pw+q/u9oFydswKWZPP/PTuX7fxKo8Ui/0P993SJAzeX//94r+r++
-        Qeb/qhq5/0srFf/PL1X+P6tIFdPAU0B//nlYD9RUC8SV///cKwHivP9/72b+/3sn+f/f23H//92MAOKQ
-        /5NyNDENONQrDHbu3/ulQI0FQI3ZQI2pQI0J///digZqDPv/70bQ/3/X/f53peliGrCzXeL/lmap/+vA
-        zpX/v6RC8f/fWzFAjeH/p+Zp/J+QpfW/O0P3f3uq/v/mREPCYTIb6E+Qc//dCPjfk6FDWAM6APnz3w1/
-        IPb735qsT7oB3em6YP+CcH2cEekGtCQZ/G+IN/xfE2v8vzLahHQD6AQYGAAkI9iedfyIaQAAAABJRU5E
-        rkJggg==
+        R0lGODlhEAAQAPYAAAEAAP///+3y9QhNe0F7nvv6+u3z9eXv8hFWhOTu8qnB0QhHdipokPz8/MPU4Pb3
+        /GeUrOzy9XihvcrZ41yNp9Hd5BRTf4mrvsnZ48/f6O7y9unt9HuivuTv8ufy9PT2/Nri7IyuwA1Oetvl
+        7ePq7szb5OPt8cvX4PH3+m+ZtfDx8/r8/NDb4/D09xBUg+7z9oepv/v8/ODp8O/4+Pr6+vz6+uzx9YSl
+        vAdMevP0+lmGoG6Usenw+fn8+uvy9Tpymvv7+oaovvT6++Lr8fz8+YmqwI+yyvT5+OPv8uDo9Oft9Yip
+        v+fy87TM2tTg6cva436kvs7b44atw/n4+QhNfPn6+7bK2oKmvPL3+R1eihVZhe/1973Q3iBii/r8+vX5
+        +PL5/PT1+HWeuPD0+Obx9O709eHs9ODp75W2x/T2/ePp7ejw8uzu9Rdbh/b4+r3O3MTT4r3N3BJWhE59
+        nPb7+vP6+vz89/D09uz09/j5+trj7gAAAAAAAAAAAAAAAAAAACH/C05FVFNDQVBFMi4wAwEBAAAh+QQB
+        AAAAACwAAAAAEAAQAAAI3AABAAgBI8iSIhygUPghsKHACwEChFFyookUCgQcPgxQg0cSFlyMQEiR0eGN
+        AEQaHDmjR4GEBG9KCrwSwA4QL2SGOFCgIgEEBg3FBGhAo0CPLyYq7JTQpeGOADEKSF1xgESFOGiyNNQR
+        QMgMN3noTCmjJoqVNg3nBMAToUWOOlUebHACR0tDAgEMCBAQYQsYFA/MPJFzN+9eG1jGfEjDBgOCwnr3
+        CtDw4g6TCY8F4o2814cHAR0wN2QQYA2SA6hBjJCRoYSLhhYiyp4dIIGFhiKoDNjNezeOBQsABAQAOw==
 </value>
   </data>
   <metadata name="bsCita.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -231,8 +219,44 @@
         dtINAGGiDUDGyGpoawAxeNSAQWkAORiqnRLAwAAA9EMMU8Daa3MAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="bsPropiedad.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>651, 18</value>
+  <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH4SURBVDhPndDPS9NxHMfx72VYf4SnunULKgoCD3UIknAE
+        WZLtYgcvI0wCTcwaiWZEUwMVxwqVLUr7IYvEYZZNJzF/pOUc+WPLua390O93v76b+ey7ldBhjuwFr9OH
+        94MXH+Hv6FtMPHpoRt9uwdAxwM3uGf485U/ttTaaOkcYnA/yciaA2e6lx+al1eL+N6S5a4ShJYmnn3x0
+        Dq9iXQwz5AzRP+XDMPqdB/dMuyNXSuv5LMqMr0l8dIs4fHHs7k2C8hZfN2Ter4jcH1yh7lZvbuR8cTXz
+        EZm5sMx0KIFLkrEpUCbfojKT61G6Rtao0llyA6eLKvHEUqzF0rijKVxiksVIktFVkccfPFhdYYxjXurb
+        rLmBkycq+KHMDSn1J9K/sfgWy1IKRzDOgMNH34Qf7Z1XuYFLl3XZudtKo+ltAsk0zk2Z2XCCF7N+Xs8F
+        uG10oLlYv/tH7iBS6md2xQ7wdiHIu6UN1CW1lKibdgcyySCTTg8RBVpOw0ICqu72c/xYBWO9DbgaBKZv
+        CPmRUk0j2ZY3UnRKy9HD5dTVGJmqFkguPcHdc4Thq6r8SK680agQ7TXIX1pJjGsxXdi3d+R5mYrExHXi
+        tkoWdQX/h3Sc3c+6vhDpmQrJLNB+pmDviKHsAGK3QKxPoPlc4d6BTFrUh2gsPqgcC8IvrqiKAGx54wgA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnSalir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIcSURBVDhPddBtSFNRHMfxi9CLlJ6Rsk1u092m7C7RaEPL
+        atGsNWYWKRIJFoyiiPlGWI0ViFi9akUPSEP3QgrN0XygVfiiSESMKMrQWbiJlxBvMrLLDF/06+zMHsa9
+        9w8fDvdwzvfCYdTmeJ+A2sg8ap+J/5DvYwNzqA7Nwtk7i5qwgJXj8nH2xJGbvQpa3XY0eP1o6RtFeO4X
+        QsIyumNLeBRLwhb8rB6wP4zRwD7/CDqnfyIwlUT7xGIGa2BSPWALRGmg7HI/2sYWFFXe+SgPfN+4hW7u
+        b5+kgR3NT+AbmVe0x/9eHkgYi7Fs4MAFZmjAcL4LF4e+yrgJy40xMAsVFUhUH0mrcSCx2wy4TyFiO0MD
+        elcHXM+FDGdfCGh8KqC8dRTMorcJ0mEe0iHCxuNHFVkP8jTybqsGefX3UNcfp04OzsDROw1zZxSW4BR2
+        +V6BSXjckKpM5DJBLkoHCKsR0t5iGvEZj8IZiuFEOI6yjihKHkRRSh44ZadnCIzIsxBNBRB5HUSjDt/4
+        AiRLC7HE5WHthjXIcVzHlzfD2HzpJYruT2QoaYrIH/HtplyktOjN0KxbjWx7GwzXhlFILnB3P2UwXRhQ
+        DqRWtvk1DWRZvdh2e1xRkSskD/wZ/bnBdKDSA/bWuCLudI96gG18DM36HGRZ3Mj3f1DE1nepB7QN3dDY
+        W8GUX4GWHFZUF1QP/B3LVeTfTP9xZee/YZjfQoLMnY5yS70AAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="dsNeo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="bsDetalle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>335, 20</value>
+  </metadata>
+  <metadata name="bsDetalle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>335, 20</value>
   </metadata>
   <metadata name="bnDetalle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>547, 18</value>
@@ -311,14 +335,103 @@
         dtINAGGiDUDGyGpoawAxeNSAQWkAORiqnRLAwAAA9EMMU8Daa3MAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="bsDetalle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>335, 20</value>
+  <metadata name="bsPropiedad.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>651, 18</value>
   </metadata>
-  <metadata name="bsDetalle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>335, 20</value>
+  <metadata name="bsPropiedad.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>651, 18</value>
   </metadata>
-  <metadata name="dsNeo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="bsMascota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>904, 17</value>
+  </metadata>
+  <metadata name="bsMascota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>904, 17</value>
+  </metadata>
+  <metadata name="dataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
+  <metadata name="dataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
+  <data name="btnAceptaServicio.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhEAAQAIcAAAEAACyRKP///0jHGaThXUvOHkvNHqbhXiKZDVDQH63heVHQHwBmAABkAAh8AkzP
+        H1DRH6fdbc/slnjCUiqjDtTvl0XJHSFuISGAITGuD6bhX9XumgBgADOxES+0DpbaTaLhX7nzcxKHCqbg
+        XsfeyXrNSTnADbDmZkjJFU7PH07LFL7awWC4T03NHWC6SDOoI0OzKli1SGDQJeby6qjkYXLYLmfZJ63l
+        Y0/SILXldlrMGTC/AMzqlDiqJjrACzGnJiaoErPkgTvBFFTPE3+/dOvy7mfTJEm2OrfVvNLqzqnqZ6rj
+        YlbQG0THGaviY+jy7lPPHJ/gV1yyWLzWv3DCXVTSH9fwnQl5A7fkk//4/07QH6XhW9Ts0NXvnFDOH+Xw
+        6lHPH0LCCpXbTP/x/5fcTi2oG8/rlknOHtnu1tft00y2LaXeYdn2pa3ucD3BB9XzoDK7CrfxdWnYJNfx
+        naTVqdPrz83vmLzdv8zrlsnpkk7SH5XaTFjSHlnTHtTvnDSoI163TdPr0DWoIx6gC2LWGFXPGw+ACqTd
+        Y6HSnafpZGXZJFfUIErNHkavNwBoAK/jb//6/6vlYf/7/7roiGW8YaXhXp7nY6PgW0bGE03OHqXgXqnn
+        YqbiYFPRIOz08i+sHKTiXQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ACH/C05FVFNDQVBFMi4wAwEBAAAh+QQBAAAAACwAAAAAEAAQAAAI/gABCBQY4EKDBhcCDFwIgEOAChsk
+        SNhQIQAHhgEiWOlihkcePH7mRFAokIGCNzmWjDhwQNOJR3YUMBA4gQ2IKJcI6IxExgUVLBMABJi0CRQn
+        DRoq3dgD6IsASkECYFBCQ8yWNYecfGDxREASGIkwXIlTgogaIzV0xJghoM4PGSEcibAkZQwSDzuOeBLA
+        5YUbOW0MOVBUZkoWEnSKCAj0JwyhITYcBGCiYtAKSZAEpBHkow8UPoUUDliECcgdAWh6mMBxpkWVAQIR
+        JOiE4hOiRkL0FGAEJgGCgQMgLPACp4mWTCkWQIC9kIKFBwUMGCjwwAIFhgMDdMiQoQPJgQEBADs=
+</value>
+  </data>
+  <data name="btnCancelaServicio.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhEAAQAIYAAAEAAOAOE/IOFdoQEN0YFMAIC+wJELkLC+IWFPhbTvZAKvZPM+8REPU4JLYKDMwJ
+        C/hYUvUOD/c7OvAKDvdTNvZJLvZELfdQN+xBPPZML/dZO+8ODvhZT+kgHPUeGfhvUfQQEOoLEfmObfAX
+        E/dYQ/ZGLPU7KvUUEvmMevY+KvAMDsgIC/mAbfQqG/qih/Y1IvZAKfdEQfmHafYmHO4MDvQxH/U0IvUd
+        F/MeFuUbGfZOMvh6WvQzIPdQNvZIMfYzM/mIbPQkGvYiIbwIC/UjGuIaFfmJdPMhGPhnVPmbfPELEfdV
+        S/UyIO8NDfdYOvUOEPZSM/QNEPdWNpYGB+skHvU1J/qoje8WEuEcGPc2Nt0JEfEZHO8JEPdTN/MwIPdX
+        OfdUN/Y5JfZFLQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH/C05FVFNDQVBFMi4wAwEBAAAh+QQB
+        AAAAACwAAAAAEAAQAAAItgABCBgIoKDBgxImCHCRBIKAgwYnQGAhIYYTDTuMKIGYBYUIEgC4fAHThYIM
+        DgWXWIHiw4BBE1IWLMjwIcQWIDqquIRIpYQYCxd6VOiwEyKAADBSKFCQQ4tRgyuQMGnQIAyWp0cxtKjh
+        xQaPFw6MBkiA4wiRAwRmBCkCceyVEQgOFCTg4UbYgmOFMGAg1yCBEwMMRvjRZAMCowNADMEbgYaKB08H
+        BC6IIArkpwWeTMFqtEABAAEBADs=
+</value>
+  </data>
+  <metadata name="bsServicio.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>110, 56</value>
+  </metadata>
+  <data name="btnAceptaVeterinario.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhEAAQAIcAAAEAACyRKP///0jHGaThXUvOHkvNHqbhXiKZDVDQH63heVHQHwBmAABkAAh8AkzP
+        H1DRH6fdbc/slnjCUiqjDtTvl0XJHSFuISGAITGuD6bhX9XumgBgADOxES+0DpbaTaLhX7nzcxKHCqbg
+        XsfeyXrNSTnADbDmZkjJFU7PH07LFL7awWC4T03NHWC6SDOoI0OzKli1SGDQJeby6qjkYXLYLmfZJ63l
+        Y0/SILXldlrMGTC/AMzqlDiqJjrACzGnJiaoErPkgTvBFFTPE3+/dOvy7mfTJEm2OrfVvNLqzqnqZ6rj
+        YlbQG0THGaviY+jy7lPPHJ/gV1yyWLzWv3DCXVTSH9fwnQl5A7fkk//4/07QH6XhW9Ts0NXvnFDOH+Xw
+        6lHPH0LCCpXbTP/x/5fcTi2oG8/rlknOHtnu1tft00y2LaXeYdn2pa3ucD3BB9XzoDK7CrfxdWnYJNfx
+        naTVqdPrz83vmLzdv8zrlsnpkk7SH5XaTFjSHlnTHtTvnDSoI163TdPr0DWoIx6gC2LWGFXPGw+ACqTd
+        Y6HSnafpZGXZJFfUIErNHkavNwBoAK/jb//6/6vlYf/7/7roiGW8YaXhXp7nY6PgW0bGE03OHqXgXqnn
+        YqbiYFPRIOz08i+sHKTiXQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ACH/C05FVFNDQVBFMi4wAwEBAAAh+QQBAAAAACwAAAAAEAAQAAAI/gABCBQY4EKDBhcCDFwIgEOAChsk
+        SNhQIQAHhgEiWOlihkcePH7mRFAokIGCNzmWjDhwQNOJR3YUMBA4gQ2IKJcI6IxExgUVLBMABJi0CRQn
+        DRoq3dgD6IsASkECYFBCQ8yWNYecfGDxREASGIkwXIlTgogaIzV0xJghoM4PGSEcibAkZQwSDzuOeBLA
+        5YUbOW0MOVBUZkoWEnSKCAj0JwyhITYcBGCiYtAKSZAEpBHkow8UPoUUDliECcgdAWh6mMBxpkWVAQIR
+        JOiE4hOiRkL0FGAEJgGCgQMgLPACp4mWTCkWQIC9kIKFBwUMGCjwwAIFhgMDdMiQoQPJgQEBADs=
+</value>
+  </data>
+  <data name="btnCancelaVeterinario.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhEAAQAIYAAAEAAOAOE/IOFdoQEN0YFMAIC+wJELkLC+IWFPhbTvZAKvZPM+8REPU4JLYKDMwJ
+        C/hYUvUOD/c7OvAKDvdTNvZJLvZELfdQN+xBPPZML/dZO+8ODvhZT+kgHPUeGfhvUfQQEOoLEfmObfAX
+        E/dYQ/ZGLPU7KvUUEvmMevY+KvAMDsgIC/mAbfQqG/qih/Y1IvZAKfdEQfmHafYmHO4MDvQxH/U0IvUd
+        F/MeFuUbGfZOMvh6WvQzIPdQNvZIMfYzM/mIbPQkGvYiIbwIC/UjGuIaFfmJdPMhGPhnVPmbfPELEfdV
+        S/UyIO8NDfdYOvUOEPZSM/QNEPdWNpYGB+skHvU1J/qoje8WEuEcGPc2Nt0JEfEZHO8JEPdTN/MwIPdX
+        OfdUN/Y5JfZFLQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH/C05FVFNDQVBFMi4wAwEBAAAh+QQB
+        AAAAACwAAAAAEAAQAAAItgABCBgIoKDBgxImCHCRBIKAgwYnQGAhIYYTDTuMKIGYBYUIEgC4fAHThYIM
+        DgWXWIHiw4BBE1IWLMjwIcQWIDqquIRIpYQYCxd6VOiwEyKAADBSKFCQQ4tRgyuQMGnQIAyWp0cxtKjh
+        xQaPFw6MBkiA4wiRAwRmBCkCceyVEQgOFCTg4UbYgmOFMGAg1yCBEwMMRvjRZAMCowNADMEbgYaKB08H
+        BC6IIArkpwWeTMFqtEABAAEBADs=
+</value>
+  </data>
+  <metadata name="bsVeterinario.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>320, 56</value>
   </metadata>
   <metadata name="taCita.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>169, 18</value>
@@ -328,5 +441,14 @@
   </metadata>
   <metadata name="taCitaPropiedad.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>765, 17</value>
+  </metadata>
+  <metadata name="taMascota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1014, 17</value>
+  </metadata>
+  <metadata name="taArticulo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>216, 56</value>
+  </metadata>
+  <metadata name="taEmpleado.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>444, 56</value>
   </metadata>
 </root>
