--- a/Neo/FrmMtoCliente.resx
+++ b/Neo/FrmMtoCliente.resx
@@ -492,4 +492,7 @@
   <metadata name="taTipoContacto.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>28, 91</value>
   </metadata>
+  <metadata name="tableAdapterManager.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>413, 91</value>
+  </metadata>
 </root>
